@@ -1,6 +1,6 @@
 Package: optextras
-Version: 2016-8.8
-Date: 2016-08-08
+Version: 2017-11.25
+Date: 2017-11-25
 Title: Tools to Support Optimization Possibly with Bounds and Masks
 Authors@R: c( person(given = c("John", "C"), family = "Nash", 
         role =c("aut", "cre"), email = "nashjc@uottawa.ca") )
